--- a/docker-compose-lark.yaml
+++ b/docker-compose-lark.yaml
@@ -163,7 +163,7 @@ services:
     privileged: true
     environment:
       TZ: Asia/Shanghai
-      ALLOW_ANONYMOUS_LOGIN: true
+      ALLOW_ANONYMOUS_LOGIN: "true"
 
   lark-kafka:
     image: bitnami/kafka:3.2.1
@@ -182,7 +182,7 @@ services:
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://127.0.0.1:9092
       KAFKA_CFG_ZOOKEEPER_CONNECT: lark-zookeeper:2181
-      ALLOW_PLAINTEXT_LISTENER: true
+      ALLOW_PLAINTEXT_LISTENER: "true"
       KAFKA_CREATE_TOPICS: "to_inbox:8:1,to_msg_gateway:8:1,to_cloud_msg:8:1,to_cache:8:1"
 #      KAFKA_ADVERTISED_LISTENERS: INSIDE://lark-kafka:9092,OUTSIDE://lark-kafka:9093
 #      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9093
